# py-opv

./: CITATION.cff  Example Usage.ipynb  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  python-publish.yml
examples/: ophthalmic-visual-field-static-perimetry-measurements.csv  workspace.ipynb
pyopv/: __init__.py  pyvenv.cfg
pyopv.egg-info/: PKG-INFO  requires.txt
pyopv/opvdicom/: debuging.ipynb
pyopv/opvdicom/data/: opv_dcm.csv
